<resources>

    <string name="app_name">资产手机端</string>
    <string name="hello_world">你好!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">资产手机端</string>
    
    <string name="strInputAccHint">输入帐号</string>
    <string name="strAccInputLabel">帐号</string>
    <string name="strPswInputLabel">密码</string>
    <string name="opt_remember">记住密码</string>
    <string name="login">登 录</string>
    <string name="offline_login">离线登录</string>
    <string name="other_login">其他用户登录</string>
    <string name="strSearch">查询</string>
    <string name="strDetail">详情</string>
    <string name="strImages">图片</string>
    <string name="strScan">扫描</string>
    <string name="manualInput">手动录入</string>
    <string name="manualInput1">手录</string>
    <string name="dataUpload">数据上传</string>
    <string name="dataDelete">数据删除</string>
    <string name="dataDownload">数据下载</string>
    <string name="strDataOrgan">管理部门</string>
    <string name="strDataTime">下载时间</string>
     
    
     <string name="photoDelete">删除</string>
    <string name="strAllcheck">全选</string>
    <string name="strReverseCheck">反选</string>
    <string name="strPhotoUpload">上传</string>
    <string name="strCancelcheck">取消</string>
      <string name="strPhotoalbum">相册</string>
    <string name="strPhotocamera">拍照</string>
     <string name="strCancel">取消</string>
    <string name="strOK">确定</string>
    <string name="strStart">开始</string>
    <string name="strEnd">结束</string>
    <string name="strBack">返回</string>
    <string name="strSubmit">提交</string>
    <string name="status_loading_more">正在加载数据\u2026</string>
    <string name="oa_look_flag_read">已读</string>
    <string name="oa_look_flag_unread">未读</string>
    
    <string name="match_type">匹配类型</string>
    <string name="asset_name">资产名称</string>
    <string name="asset_code">资产编码</string>
    <string name="inv_note">备注</string>
    <string name="asset_star">星级</string>
     <string name="asset_star_label">星　　级:</string>
    <string name="inv_note_hint">请输入50个字以内</string>
    <string name="storage">存放地点</string>
    <string name="asset_type">资产类型</string>
    <string name="category">资产类别</string>
    <string name="starNum1">最小星级</string>
    <string name="starNum2">最大星级</string>
    <string name="inventory_complete">盘点情况</string>
    <string name="inventory_info">盘点情况</string>
    <string name="inventory_info1">情况</string>
    <string name="asset_organ">使用部门</string>
    <string name="cf_place">使用部门</string>
    
    <string name="fs_serter_search_main_barCode">条形码</string>
    <string  name="propose_context_tip">输入建议内容</string> 
    <string  name="query_context_tip">输入查询条件</string> 
    <string  name="query_wp_name">物品名称</string> 
    <string name="sr_title_tip">标  题</string>
    
    <string name="ewm_prompt">将二维码图片放入取景器中识别.</string>

    <string name="app_about_organ">使用单位：</string>
    <string name="app_about_copyright">版权所有\u0040,</string>
    <string name="app_about_tecSup">技术支持：</string>
    <string name="app_about_tecSup_value">太原瑞世精诚有限公司</string>
    <string name="app_about_tel">联系电话：</string>
    <string name="app_about_url">网址：</string>
    
    <string name="strCaption">提示</string>
    <string name="strAboutTitle"></string>
    <string name="strAboutContent">版本v1.1\n\n\n版权所有\u0040,</string>
    <string name="strHelpContent">帮助</string>
     <!-- 图片查看器指示 -->
    <string name="viewpager_indicator">%1$d/%2$d</string>
    
     <!-- zxing(start) -->
    <string name="placeHolder">placeHolder</string>
    <string name="seekbar_add">+</string>
    <string name="seekbar_minus">-</string>
    <string name="create">生成</string>
    <string name="scan_failed">扫描失败</string>
    <string name="bottom_hint">建议与镜头保持10CM距离，尽量避免逆光和阴影</string>
    <string name="top_hint">将条形码或二维码置于取景框内系统会自动扫描</string>
    <string name="cancel">取消</string>
    <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
    <string name="button_ok">确定</string>
    <!-- zxing(end) -->
    
</resources>