<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:orientation="vertical" android:id="@+id/loginRoot"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:orientation="vertical"
		android:id="@+id/loginLinearLayout01" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1.0"
		android:background="@drawable/default_bg">
		<RelativeLayout android:id="@+id/RelativeLayout03"
			android:layout_width="fill_parent" android:layout_marginTop="30dp"
			android:layout_height="wrap_content">
			<ImageView android:id="@+id/loginlogo" android:background="@drawable/logo_asset"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginTop="20.0dp" android:layout_centerInParent="true" />
		</RelativeLayout>
		<RelativeLayout android:id="@+id/loginRelativeLayout02"
			android:background="@drawable/login_back" android:paddingTop="21.0dp"
			android:paddingBottom="0.0dp" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_marginLeft="20.0dp"
			android:layout_marginTop="0.0dp" android:layout_marginRight="20.0dp">
			<ImageView android:id="@+id/loginfaceImg"
				android:background="@drawable/login_head" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginTop="10.0dp" />
			<EditText android:id="@+id/login_edit_account"
				android:paddingLeft="45.0sp" android:saveEnabled="true"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip"
				android:layout_marginRight="5.0dip" android:layout_marginBottom="5.0dp"
				android:maxLength="20" android:layout_toRightOf="@+id/loginfaceImg"
				android:layout_alignParentTop="true"  android:inputType="text" />
			<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" android:id="@+id/loginTextView01"
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:layout_marginRight="15.0sp"
				android:text="@string/strAccInputLabel" android:layout_alignLeft="@+id/login_edit_account"
				android:layout_alignTop="@+id/login_edit_account"
				android:layout_alignBottom="@+id/login_edit_account" />
 
			<EditText android:id="@+id/login_edit_pwd"
				android:paddingLeft="45.0sp" android:saveEnabled="true"
				android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginRight="1.0dip" android:maxLength="20"
				android:layout_below="@+id/login_edit_account"
				android:layout_alignLeft="@+id/login_edit_account"
				android:layout_alignRight="@+id/login_edit_account"
				android:inputType="textPassword" />
			<TextView android:textSize="16.0dip" android:textColor="#ff3f3f3f"
				android:gravity="center_vertical" android:id="@+id/loginTextView02"
				android:paddingLeft="7.0sp" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/strPswInputLabel"
				android:layout_alignTop="@+id/login_edit_pwd"
				android:layout_alignRight="@+id/loginTextView01"
				android:layout_alignBottom="@+id/login_edit_pwd" />
			<Button android:id="@+id/login_btn_login"
				android:layout_width="75.0dp" android:layout_height="42.0dp"
				android:layout_marginTop="7.0dp" android:layout_alignRight="@+id/login_edit_pwd"
				android:text="@string/login" android:layout_below="@+id/loginTextView02"
				 />
			<Button android:id="@+id/login_btn_offlogin"
				android:layout_width="95.0dp" android:layout_height="42.0dp"
				android:layout_marginTop="7.0dp"  
				android:text="@string/offline_login" android:layout_below="@+id/loginTextView02"
				android:layout_toLeftOf="@+id/login_btn_login"
				  />
			<TextView android:textSize="10.0dip" android:textColor="#004B97"
				android:id="@+id/ohter_login_textView" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/other_login"
				android:gravity="center_vertical" android:layout_toLeftOf="@+id/login_btn_offlogin"
				android:layout_alignBottom="@+id/login_btn_offlogin"
				 />
		</RelativeLayout>

	</LinearLayout>
	<RelativeLayout android:id="@+id/RelativeLayout01"
		android:visibility="gone" android:background="@drawable/bottom"
		android:layout_width="fill_parent" android:layout_height="44.0dip">
		<ImageButton android:id="@+id/login_option"
			android:background="@drawable/option" android:clickable="true"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginLeft="13.0dip" android:layout_marginTop="2.0dip"
			android:layout_centerVertical="true" />
	</RelativeLayout>
</LinearLayout>